The NextJS app server is having trouble starting. Please identify what c

--- a/package.json
+++ b/package.json
@@ -68,6 +68,11 @@
   },
   "trustedDependencies": [
     "@firebase/util",
-    "protobufjs"
+    "@prisma/client",
+    "@prisma/engines",
+    "esbuild",
+    "prisma",
+    "protobufjs",
+    "sharp"
   ]
 }
