--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
+    "dev": "next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- bun src/ai/dev.ts",
     "genkit:watch": "genkit start -- bun --watch src/ai/dev.ts",
     "build": "prisma generate && next build",
@@ -15,8 +15,8 @@
     "@genkit-ai/googleai": "^1.13.0",
     "@genkit-ai/next": "^1.13.0",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "5.16.1",
-    "@prisma/extension-accelerate": "1.1.0",
+    "@prisma/client": "latest",
+    "@prisma/extension-accelerate": "latest",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -62,17 +62,12 @@
     "@types/react-dom": "^18.3.7",
     "genkit-cli": "^1.13.0",
     "postcss": "^8.5.6",
-    "prisma": "5.16.1",
+    "prisma": "latest",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "trustedDependencies": [
     "@firebase/util",
-    "@prisma/client",
-    "@prisma/engines",
-    "esbuild",
-    "prisma",
-    "protobufjs",
-    "sharp"
+    "protobufjs"
   ]
 }
