--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --port 9002 --hostname 0.0.0.0",
     "genkit:dev": "genkit start -- bun src/ai/dev.ts",
     "genkit:watch": "genkit start -- bun --watch src/ai/dev.ts",
     "build": "prisma generate && next build",
@@ -15,8 +15,8 @@
     "@genkit-ai/googleai": "^1.13.0",
     "@genkit-ai/next": "^1.13.0",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "latest",
-    "@prisma/extension-accelerate": "latest",
+    "@prisma/client": "5.17.0",
+    "@prisma/extension-accelerate": "1.1.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -62,7 +62,7 @@
     "@types/react-dom": "^18.3.7",
     "genkit-cli": "^1.13.0",
     "postcss": "^8.5.6",
-    "prisma": "latest",
+    "prisma": "5.17.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
