--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 9002 --hostname 0.0.0.0",
+    "dev": "bunx prisma generate && bunx prisma db push && next dev",
     "genkit:dev": "genkit start -- bun src/ai/dev.ts",
     "genkit:watch": "genkit start -- bun --watch src/ai/dev.ts",
     "build": "prisma generate && next build",
@@ -16,7 +16,7 @@
     "@genkit-ai/next": "^1.13.0",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "5.17.0",
-    "@prisma/extension-accelerate": "1.1.0",
+    "@prisma/extension-accelerate": "^2.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
