--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bunx prisma generate && next dev",
+    "dev": "bunx prisma generate --accelerate && next dev",
     "genkit:dev": "genkit start -- bun src/ai/dev.ts",
     "genkit:watch": "genkit start -- bun --watch src/ai/dev.ts",
-    "build": "prisma generate && next build",
+    "build": "prisma generate --accelerate && next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
@@ -15,7 +15,7 @@
     "@genkit-ai/googleai": "^1.13.0",
     "@genkit-ai/next": "^1.13.0",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "5.17.0",
+    "@prisma/client": "^6.10.1",
     "@prisma/extension-accelerate": "^2.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -62,12 +62,17 @@
     "@types/react-dom": "^18.3.7",
     "genkit-cli": "^1.13.0",
     "postcss": "^8.5.6",
-    "prisma": "5.17.0",
+    "@prisma/client": "^6.10.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "trustedDependencies": [
     "@firebase/util",
-    "protobufjs"
+    "@prisma/client",
+    "@prisma/engines",
+    "esbuild",
+    "prisma",
+    "protobufjs",
+    "sharp"
   ]
 }
