I see this error with the app, reported by NextJS, please fix it. The er

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bunx prisma generate --accelerate && next dev",
+    "dev": "prisma generate --accelerate && next dev",
     "genkit:dev": "genkit start -- bun src/ai/dev.ts",
     "genkit:watch": "genkit start -- bun --watch src/ai/dev.ts",
     "build": "prisma generate --accelerate && next build",
@@ -62,7 +62,7 @@
     "@types/react-dom": "^18.3.7",
     "genkit-cli": "^1.13.0",
     "postcss": "^8.5.6",
-    "@prisma/client": "^6.10.1",
+    "prisma": "^6.10.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
