--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
     "@genkit-ai/next": "^1.13.0",
+    "@googlemaps/google-maps-services-js": "^3.4.1",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.10.1",
     "@prisma/extension-accelerate": "^2.0.1",
